# coq-record-update

./: .gitattributes  .gitignore  .travis.yml  DepReaderApplicative.v  Examples.v  LICENSE  Makefile  Makefile.coq.local  ProjInstances.v  README.md  ReaderApplicative.v  RecordSet.v  RecordUpdate.v  SetTacticInTerm.v  _CoqProject  coq-record-update.opam  dune  dune-project  flake.nix  libname  meta.yml  test-normalizer.sed
.github/workflows/: coq-action.yml  flake-build.yml
src/: Lens.v  ReadmeExampleTests.v  RecordEta.v  RecordSet.v  RecordSetTests.v  RecordUpdate.v  RegressionTests.v  dune
tests/: Large.v  LensTests.v  ListNotationTests.v  PrintingTests.ref  PrintingTests.v  ReadmeExampleTests.v  RecordSetTests.v  RegressionTests.ref  RegressionTests.v  SimpleRecordUpdate.ref  SimpleRecordUpdate.v  coqpl_2021.ref  coqpl_2021.v
