opam-version: "2.0"
maintainer: "tchajed@gmail.com"
version: "dev"

homepage: "https://github.com/tchajed/record-update"
dev-repo: "git+https://github.com/tchajed/record-update.git"
bug-reports: "https://github.com/tchajed/record-update/issues"
license: "MIT"

synopsis: "Generic support for updating record fields"
description: """
While Coq provides projections for each field of a record, it has no
convenient way to update a single field of a record. This library provides a
generic way to update a field by name, where the user only has to implement a
simple typeclass that lists out the record fields."""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.8" & < "8.13~") | (= "dev")}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:record"
  "logpath:RecordUpdate"
]
authors: [
  "Tej Chajed"
]
